# wiedemann

./: README.md  pyproject.toml  test.ipynb  wiedemann_test.ipynb
Tests/: run_tests.py  test_berlekamp_massey.py  test_integration.py  test_wiedemann.py
core/: berlekamp_massey.py  gf2.py  scalar_wiedemann.py  wiedemann.py
doc/: Block Wiedemann Solver for Finite Field Sparse Linear Systems.md  Implementation-First Reading Guide for Block Wiedemann Solver.md  week1-implementation-guide.md
fail womp womp/: berlekamp_massey.py  scalar_wiedemann.py
old/: berlekamp_massey_test.ipynb  gf2_linalg.py  test.ipynb
src/wiedemann/: block_wiedemann.py  scalar_bm.py  scalar_wiedemann.py  solver.py
src/wiedemann.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test/: other_peoples_code.ipynb
tests/: test_block_bm.py  test_block_wiedemann.py  test_scalar_bm.py  test_scalar_wiedemann.py
